--- a/verde/package.json
+++ b/verde/package.json
@@ -12,7 +12,8 @@
     "moment-timezone": "^0.5.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
