--- a/verde/package.json
+++ b/verde/package.json
@@ -11,6 +11,8 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.8.0",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.2.0"
